# algo-study

./: .gitignore  index.html  main.py  pyproject.toml  readme.md
backjun/: 1.py  15686.py  5373.py
data_struct/: main.py
programmers/: 0-ages.py  0-similar-array.py  0-similar-number.py  0-string-in-string.py  1-running-race.py  2-back-big-num-find.py  2-billiards-practice.py  2-bow-challinge.py  2-mining.py  main.py
programmers/0/: push-string.py  similar-array.py
programmers/2/: back-big-num-find.py  car-mean-rental-time.sql  delivery-parcel.py  divide-number-card.py  elevator-of-magic.py  escape-the-maze.py  game-of-defence.py  master_of_solo_play.py  rental-hotel.py  ricochet-robot.py  sequence-num-sum.py  siso-pair.py  solo-play-tictacto.py  the_count_of_sequence_partition_num_sum.py
regex/: main.py  practice1.py  practice2.py
sort/: main.py
